--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ body {
 </div>
 
 <div class="topnav">
-  <a href="index.html">home</a>
+  <a href="INDEX2.html">HOME</a>
   <a href="katalog.html">katalog</a>
   <a href="#">Link</a>
   <a href="#" style="float:right">Link</a>
@@ -123,37 +123,39 @@ body {
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
-      <h2>perpustakaan</h2>
-      <h5>perpustakaan 11 09 2024</h5>
-      <img src="buku1.jpg"width="50%">
-
-      <p>perpustakaan</p>
-      <p> pperpustakaan.</p>
+      <h2>PERPUSTAKAAN</h2>
+      <img src="gambar2.jpg">
+      <h5>Title description, Dec 7, 2017</h5>
+      <img src="gambar4.jpg">
+      <div class="fakeimg" style="height:200px;">Image</div>
+      <p>Tentang perpustakaan</p>
+      <p>ini halaman perpustakaan</p>
     </div>
     <div class="card">
-      <h2>Perpustakaan</h2>
-    <h5>peroustakaan</h5>
-      <img src="buku2.jpg"width="50%">
-      <p>tentang perpustakaan.</p>
-      <p>perpustakaa adalah institusi yang mengumpulkan pengetahuan tercetak dan terekam, mengelolanya dengan cara khusus guna memenuhi kebutuhan inteliqualitas para pengguananya melalui beragam cara interaksi penegtahuan.</p>
+      <h2>Halaman pepustakaan</h2>
+      <img src="gambar3.jpg">
+      <p>disajikan kepada masyarakat guna memenuhi kebutuhan pengguna akan informasi</p>
+      <h5>Title description, Sep 2, 2017</h5>
+      <div class="fakeimg" style="height:200px;">Image</div>
+      <p>Some text..</p>
+      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
     </div>
   </div>
   <div class="rightcolumn">
     <div class="card">
       <h2>About Me</h2>
-        <img src="buku1.jpg"width="50%">
+      <img src="perpus1.jpg"> <width="100%">
       <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
     </div>
     <div class="card">
       <h3>Popular Post</h3>
-        <img src="buku2.jpg"width="100%">
-          <img src="buku2.jpg"width="100%">
-            <img src="buku2.jpg"width="100%">
+      <img src="perpus1.jpg"> <width="100%">
+      <img src="perpus1.jpg"> <width="100%">
+ <img src="perpus1.jpg"> <width="100%">
     </div>
     <div class="card">
       <h3>Follow Me</h3>
-      <img src="buku2.jpg"width="100%">
-      <p>instagram  @tetiiyngsh22 .</p>
+      <p>instagram @tetiiyngsh22 .</p>
     </div>
   </div>
 </div>
@@ -161,10 +163,6 @@ body {
 <div class="footer">
   <h2>Footer</h2>
 </div>
-<div class="footer"> <p> Copyright &copy; 2024
-  tetti yuningsih All Rights
-Reserved.</p>
-  <h2>footer</h2>
 
 </body>
 </html>
